fix overflow

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -10,7 +10,7 @@
 body {
   padding: 5vh 0rem 0 0;
   background-color: $body-color-bg;
-  overflow: hidden;
+  
 }
 
 header {
