--- a/style/style.css
+++ b/style/style.css
@@ -14,7 +14,6 @@
 body {
   padding: 5vh 0rem 0 0;
   background-color: #112221;
-  overflow: hidden;
 }
 
 header {
